<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">My League</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_name_team">Team\'s Name</string>
    <string name="text_manager_name">Manager\'s Team</string>
    <string name="text_email_team">Email\'s Team</string>
    <string name="text_phone_team">Contact Phone\'s Team</string>
    <string name="text_button_save">Save Team</string>
    <string name="text_desc_cont_camera">Take Picture\'s Team</string>
    <string name="text_desc_cont_picture_team">Picture\'s Team</string>
    <string name="title_activity_create_tournament">CreateTournamentActivity</string>
    <string name="text_view_create_tournament">Create a new tournament</string>
    <string name="edit_text_name_hint">Tournament name</string>
    <string name="edit_text_fecha_inicio">Date</string>
    <string name="title_activity_add_team">AddTeamActivity</string>
    <string name="text_view_add_team">Add team</string>
    <string name="title_activity_match_result">MatchResultActivity</string>
    <string name="text_view_local">Local</string>
    <string name="text_view_visitant"></string>
    <string name="text_view_local_score"></string>
    <string name="text_view_vistant_score">Score</string>
    <string name="text_view_local_score_label">Score</string>
    <string name="text_view_vistant_score_label">Score</string>
    <string name="text_view_local_faults">Faults</string>
    <string name="text_view_visitant_faults">Faults</string>
    <string name="edit_text_period">Period</string>
    <string name="edit_text_first_place">First place award</string>
    <string name="edit_text_second_place">Second place award</string>
    <string name="edit_text_third_place">Third place award</string>
    <string name="button_add_team">Add Team</string>
    <string name="text_vs">VS</string>
    <string name="text_add_my_team">Add My Team</string>
    <string name="text_local">Local</string>
    <string name="text_local_goals">Local Score</string>
    <string name="text_local_faults">Local Faults</string>
    <string name="text_visit">Visit</string>
    <string name="text_visit_goals">Visit Score</string>
    <string name="text_visit_faults">Visit Faults</string>
    <string name="text_view_play_date"></string>
    <string name="text_view_play_hr"></string>
    <string name="text_view_name_local_team"></string>
    <string name="text_view_label_vs"></string>
    <string name="text_view_visit_score"></string>
    <string name="text_view_name_visit_club"></string>
    <string name="text_view_yellow_cards_for_play"></string>
    <string name="text_view_red_cards_for_play"></string>
    <string name="text_save_game">Save Game</string>
    <string name="title_activity_principal_news">PrincipalNewsActivity</string>
    <string name="text_view_score_local_ppal">0</string>
    <string name="text_view_score_away_ppal">0</string>
    <string name="text_view_name_away_ppal"></string>
    <string name="text_view_name_local_ppal"></string>
    <string name="nullString"></string>
    <string name="label_news">News</string>
    <string name="action_add_filter_news">Filter preferences</string>
    <string name="pref_filter_news">Filter preferences</string>
    <string name="pref_news_title">Filter news by ...</string>
    <string name="pref_news_summary">You can filter the news</string>
    <string name="title_principal_activity_settings">Filter news</string>
    <string name="edit_text_select_date">Date</string>
    <string name="periodicity">Periodicity</string>
    <string name="title_activity_match_list">Choose a Match</string>
    <string name="button_add_tournament">Add Tournament</string>
    <string name="edit_text_number_of_teams">Number of teams</string>
    <string name="title_activity_teams_list">TeamsListActivity</string>
    <string name="text_view_empty_list">No team entries</string>
    <string name="text_view_label_notify_tournament">A new tournament has been created!</string>
    <string name="text_view_news_description"></string>
    <string name="text_view_title_news"></string>
    <string name="title_activity_news_current_registrations">News</string>
    <string name="text_local_exp">Local Exp</string>
    <string name="text_visit_exp">Visit Exp</string>
    <string name="text_news">News</string>
    <string name="text_create_tournament">Create Tournament</string>
    <string name="text_add_teams_to_tournament">Add Teams to Tournament</string>
    <string name="text_ok">Ok</string>
    <string name="text_name_app">My League</string>
    <string name="text_desc_ico">Image Icon</string>
    <string name="text_check_connection">Please Check your Internet Connection</string>
    <string name="text_contact">Contact</string>
    <string name="text_user">User</string>
    <string name="text_username">Username</string>
    <string name="text_username_summary">Please enter a Username</string>
    <string name="text_id">Id</string>
    <string name="text_id_summary">The app fill this field</string>
    <string name="text_send_email">Select a App to Send the Email</string>
    <string name="text_body_mail">Make your questions to the Manager of MyLeague</string>
    <string name="text_subject_email">My League Contact</string>
    <string name="default_username">Username</string>
    <string name="default_id">-1</string>
    <string name="text_sign_up_team">New team</string>
    <string name="text_add_my_team_to_tournament">Sign up to league</string>
    <string name="text_view_teams">Teams</string>
    <string name="text_fill_statistics">Fill Statistics</string>
    <string name="text_sucessfull_add">Team Added Sucessfull</string>
    <string name="text_sucessfull_fill_match">Sucessfull Save of Match</string>
    <string name="button_add_team_tournament">Add team(s) to the tournament</string>
    <string name="text_view_synck_teams">Please, sync teams to show</string>
    <string name="menu_sync_teams">Synck Teams</string>
    <string name="action_add_team">Add team</string>
    <string name="toast_no_teams_found">Add some teams</string>
    <string name="text_title_teams">Teams</string>
    <string name="text_title_create_tournament">Create Tournament</string>
    <string name="text_title_fill_matchs">Fill Statistics</string>
    <string name="text_title_new_team">New Team</string>
    <string name="text_title_add_teams_to_tournament">Add Teams to Tournament</string>
    <string name="text_title_add_my_team_to_tournament">Add my Team to Tournament</string>
    <string name="text_sucessfull_add_teams">Teams Added Sucessfull</string>
    <string name="toast_no_match">No match found</string>


</resources>
