<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SignInTeamActivity$PlaceholderFragment"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/text_name_team" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etManager"
        android:layout_gravity="center_horizontal"
        android:hint="@string/text_manager_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmail"
        android:layout_gravity="center_horizontal"
        android:hint="@string/text_email_team" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/etPhone"
        android:layout_gravity="center_horizontal"
        android:hint="@string/text_phone_team" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ivPictureTeam"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/text_desc_cont_picture_team" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibTakePicture"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_image_camera_alt"
            android:contentDescription="@string/text_desc_cont_camera" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_save"
        android:id="@+id/btSave"
        android:layout_gravity="center_horizontal"
        android:enabled="false" />
</LinearLayout>
